fixed spacing of slot heading.

--- a/css/index.scss
+++ b/css/index.scss
@@ -39,6 +39,10 @@ th {
   text-align: left;
 }
 
+.heading {
+  margin-left: 3.4rem;
+}
+
 .row,
 .heading {
   padding: 1rem;
